--- a/gauge.html
+++ b/gauge.html
@@ -16,8 +16,14 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script>
         var config = {
-            fraction: .895,
-            fractionLabel: '',
+            fraction: 1,
+            label: {
+                fraction: '',
+                left: '',
+                top: '',
+                right: '',
+                bottom: ''
+            },
             topMarker: [],
             bottomMarker: [],
             margin: {
@@ -28,7 +34,7 @@
             },
             width: 300,
             height: 26,
-            borderColor: 'none',
+            borderColor: 'lightgray',
             emptyColor: 'lightgray',
             fractionColor: 'green',
             fractionLabelColor: 'white',
@@ -40,28 +46,28 @@
             return Math.max(0, Math.min((config.width - config.strokeWidth) * config.fraction, config.width - config.strokeWidth));
         }
 
-        var adjustFractionTextPosition = function(fractionText) {
-            var length = fractionText.node().getComputedTextLength();
+        var adjustFractionTextPosition = function(fractionLabel) {
+            var length = fractionLabel.node().getComputedTextLength();
             if (fillWidth() + config.strokeWidth + length + 1 > config.width - config.strokeWidth) {
-                fractionText.attr('x', fillWidth() - length - config.strokeWidth - 1)
+                fractionLabel.attr('x', fillWidth() - length - config.strokeWidth - 1)
                     .attr('fill', config.fractionLabelColor);
             } else {
-                fractionText.attr('x', fillWidth() + config.strokeWidth + 1)
+                fractionLabel.attr('x', fillWidth() + config.strokeWidth + 1)
                     .attr('fill', config.fractionColor);
             }
         }
 
-        var fractionTextLabel = function() {
-            if (config.fractionTextLabel) {
-                return config.fractionTextLabel;
+        var fractionLabelText = function() {
+            if (config.label.fraction) {
+                return config.label.fraction;
             } else {
                 return Math.floor(config.fraction * 100) + '%';
             }
         }
 
         var svg = d3.select('#gauge').append("svg")
-            .attr('width', config.width + config.margin.left + config.margin.right)
-            .attr('height', config.height + config.margin.top + config.margin.bottom)
+            .attr('width', config.width + config.margin.left + config.margin.right + config.strokeWidth)
+            .attr('height', config.height + config.margin.top + config.margin.bottom + config.strokeWidth)
             .append("g")
             .attr("transform", "translate(" + config.margin.left + "," + config.margin.top + ")");
 
@@ -81,13 +87,13 @@
             .attr('height', config.height - config.strokeWidth)
             .style('fill', config.fractionColor);
 
-        var fractionText = svg.append('text')
-            .text(fractionTextLabel())
+        var fractionLabel = svg.append('text')
+            .text(fractionLabelText())
             .attr('y', config.height - Math.max(2, config.strokeWidth / 2) - (config.height - config.textSize) / 2)
             .attr('fill', 'none')
             .attr('font-family', 'sans-serif')
             .attr('font-size', config.textSize);
-        adjustFractionTextPosition(fractionText);
+        adjustFractionTextPosition(fractionLabel);
     </script>
 </body>
 
