--- a/gauge.html
+++ b/gauge.html
@@ -6,16 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gauge</title>
 
+    <style type="text/css">
+        body {
+            font-family: sans-serif;
+        }
 
+        textarea {
+            width: 100%;
+            outline: none;
+        }
+
+        #error {
+            color: white;
+            background: red;
+        }
+    </style>
 </head>
 
 <body>
 
     <div id="gauge"></div>
+    <div>Please reload this page for a reset of all configurations.</div>
+    <div id="error"></div>
+    <textarea id="config" spellcheck="false" autocorrect="off" autocapitalize="off" rows="75"></textarea>
+
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script>
         var config = {
+            id: 'gauge',
             fraction: .58,
             width: 300,
             height: 26,
@@ -34,7 +53,7 @@
             },
             label: {
                 fraction: '',
-                left: 'holy dude:',
+                left: 'left label',
                 right: 'right label'
             },
             marker: [{
@@ -70,126 +89,151 @@
 
         }
 
-        var fractionPosition = function(fraction) {
-            return Math.max(0, Math.min((config.width - config.strokeWidth) * fraction, config.width - config.strokeWidth));
-        }
 
-        var adjustFractionTextPosition = function(fractionLabel) {
-            var length = fractionLabel.node().getComputedTextLength();
-            if (fractionPosition(config.fraction) + config.strokeWidth + length + 1 > config.width - config.strokeWidth) {
-                fractionLabel.attr('x', fractionPosition(config.fraction) - length - config.strokeWidth - 1)
-                    .attr('fill', config.fractionLabelColor);
-            } else {
-                fractionLabel.attr('x', fractionPosition(config.fraction) + config.strokeWidth + 1)
-                    .attr('fill', config.fractionColor);
+        function drawGauge(config) {
+
+            var fractionPosition = function(fraction) {
+                return Math.max(0, Math.min((config.width - config.strokeWidth) * fraction, config.width - config.strokeWidth));
             }
-        }
 
-        var fractionLabelText = function() {
-            if (config.label.fraction) {
-                return config.label.fraction;
-            } else {
-                return Math.round(config.fraction * 100) + '%';
+            var adjustFractionTextPosition = function(fractionLabel) {
+                var length = fractionLabel.node().getComputedTextLength();
+                if (fractionPosition(config.fraction) + config.strokeWidth + length + 1 > config.width - config.strokeWidth) {
+                    fractionLabel.attr('x', fractionPosition(config.fraction) - length - config.strokeWidth - 1)
+                        .attr('fill', config.fractionLabelColor);
+                } else {
+                    fractionLabel.attr('x', fractionPosition(config.fraction) + config.strokeWidth + 1)
+                        .attr('fill', config.fractionColor);
+                }
             }
-        }
 
-        var middlePositionText = function() {
-            return config.height - Math.max(2, config.strokeWidth / 2) - (config.height - config.textSize) / 2;
-        }
+            var fractionLabelText = function() {
+                if (config.label.fraction) {
+                    return config.label.fraction;
+                } else {
+                    return Math.round(config.fraction * 100) + '%';
+                }
+            }
 
-        var drawMarker = function(marker) {
+            var middlePositionText = function() {
+                return config.height - Math.max(2, config.strokeWidth / 2) - (config.height - config.textSize) / 2;
+            }
 
-            var color = marker.color ? marker.color : config.fractionColor;
+            var drawMarker = function(marker) {
 
-            svg.append('line')
-                .attr('x1', config.strokeWidth / 2 + fractionPosition(marker.fraction))
-                .attr('y1', marker.position == 'BOTTOM' ? config.height + config.strokeWidth / 2 : -config.strokeWidth / 2)
-                .attr('x2', config.strokeWidth / 2 + fractionPosition(marker.fraction))
-                .attr('y2', marker.position == 'BOTTOM' ? config.height + config.textSize : -config.textSize)
-                .style('stroke-width', 1)
-                .style('stroke', color);
+                var color = marker.color ? marker.color : config.fractionColor;
 
-            if (marker.label) {
+                svg.append('line')
+                    .attr('x1', config.strokeWidth / 2 + fractionPosition(marker.fraction))
+                    .attr('y1', marker.position == 'BOTTOM' ? config.height + config.strokeWidth / 2 : -config.strokeWidth / 2)
+                    .attr('x2', config.strokeWidth / 2 + fractionPosition(marker.fraction))
+                    .attr('y2', marker.position == 'BOTTOM' ? config.height + config.textSize : -config.textSize)
+                    .style('stroke-width', 1)
+                    .style('stroke', color);
+
+                if (marker.label) {
+                    svg.append('text')
+                        .text(marker.label)
+                        .attr('x', config.strokeWidth / 2 + fractionPosition(marker.fraction))
+                        .attr('y', marker.position == 'BOTTOM' ? config.height + 2 * config.textSize : -config.textSize - 2)
+                        .attr('text-anchor', 'middle')
+                        .attr('fill', color)
+                        .attr('font-family', 'sans-serif')
+                        .attr('font-size', config.textSize);
+                }
+            }
+
+            var drawDivider = function(divider) {
+                var color = divider.color ? divider.color : 'white';
+
+                svg.append('line')
+                    .attr('x1', config.strokeWidth / 2 + fractionPosition(divider.fraction))
+                    .attr('y1', config.strokeWidth / 2)
+                    .attr('x2', config.strokeWidth / 2 + fractionPosition(divider.fraction))
+                    .attr('y2', config.height - config.strokeWidth / 2)
+                    .style('stroke-width', 1)
+                    .style('stroke', color);
+            }
+
+            d3.select('#' + config.id + 'svg').remove();
+
+            var svg = d3.select('#' + config.id).append('svg')
+                .attr('id', config.id + 'svg')
+                .attr('width', config.width + config.margin.left + config.margin.right + config.strokeWidth)
+                .attr('height', config.height + config.margin.top + config.margin.bottom + config.strokeWidth)
+                .append('g')
+                .attr('transform', 'translate(' + config.margin.left + "," + config.margin.top + ')');
+
+            svg.append('rect')
+                .attr('x', 0)
+                .attr('y', 0)
+                .attr('width', config.width)
+                .attr('height', config.height)
+                .style('stroke-width', config.strokeWidth)
+                .style('stroke', config.borderColor)
+                .style('fill', config.emptyColor);
+
+            svg.append('rect')
+                .attr('x', config.strokeWidth / 2)
+                .attr('y', config.strokeWidth / 2)
+                .attr('width', fractionPosition(config.fraction))
+                .attr('height', config.height - config.strokeWidth)
+                .style('fill', config.fractionColor);
+
+            for (divider of config.divider) {
+                drawDivider(divider);
+            }
+
+            var fractionLabel = svg.append('text')
+                .text(fractionLabelText())
+                .attr('y', middlePositionText())
+                .attr('fill', 'none')
+                .attr('font-family', 'sans-serif')
+                .attr('font-size', config.textSize);
+            adjustFractionTextPosition(fractionLabel);
+
+            if (config.label.left) {
                 svg.append('text')
-                    .text(marker.label)
-                    .attr('x', config.strokeWidth / 2 + fractionPosition(marker.fraction))
-                    .attr('y', marker.position == 'BOTTOM' ? config.height + 2 * config.textSize : -config.textSize - 2)
-                    .attr('text-anchor', 'middle')
-                    .attr('fill', color)
+                    .text(config.label.left)
+                    .attr('x', -config.textSize / 2)
+                    .attr('y', middlePositionText())
+                    .attr('text-anchor', 'end')
+                    .attr('fill', config.labelColor)
                     .attr('font-family', 'sans-serif')
                     .attr('font-size', config.textSize);
             }
+
+            if (config.label.right) {
+                svg.append('text')
+                    .text(config.label.right)
+                    .attr('x', config.width + config.strokeWidth + config.textSize / 2)
+                    .attr('y', middlePositionText())
+                    .attr('fill', config.labelColor)
+                    .attr('font-family', 'sans-serif')
+                    .attr('font-size', config.textSize);
+            }
+
+            for (marker of config.marker) {
+                drawMarker(marker);
+            }
+
         }
 
-        var drawDivider = function(divider) {
-            var color = divider.color ? divider.color : 'white';
+        drawGauge(config);
 
-            svg.append('line')
-                .attr('x1', config.strokeWidth / 2 + fractionPosition(divider.fraction))
-                .attr('y1', config.strokeWidth / 2)
-                .attr('x2', config.strokeWidth / 2 + fractionPosition(divider.fraction))
-                .attr('y2', config.height - config.strokeWidth / 2)
-                .style('stroke-width', 1)
-                .style('stroke', color);
-        }
+        var textarea = document.getElementById('config');
+        var error = document.getElementById('error');
 
-        var svg = d3.select('#gauge').append("svg")
-            .attr('width', config.width + config.margin.left + config.margin.right + config.strokeWidth)
-            .attr('height', config.height + config.margin.top + config.margin.bottom + config.strokeWidth)
-            .append("g")
-            .attr("transform", "translate(" + config.margin.left + "," + config.margin.top + ")");
-
-        var border = svg.append('rect')
-            .attr('x', 0)
-            .attr('y', 0)
-            .attr('width', config.width)
-            .attr('height', config.height)
-            .style('stroke-width', config.strokeWidth)
-            .style('stroke', config.borderColor)
-            .style('fill', config.emptyColor);
-
-        var fill = svg.append('rect')
-            .attr('x', config.strokeWidth / 2)
-            .attr('y', config.strokeWidth / 2)
-            .attr('width', fractionPosition(config.fraction))
-            .attr('height', config.height - config.strokeWidth)
-            .style('fill', config.fractionColor);
-
-        for (divider of config.divider) {
-            drawDivider(divider);
-        }
-
-        var fractionLabel = svg.append('text')
-            .text(fractionLabelText())
-            .attr('y', middlePositionText())
-            .attr('fill', 'none')
-            .attr('font-family', 'sans-serif')
-            .attr('font-size', config.textSize);
-        adjustFractionTextPosition(fractionLabel);
-
-        if (config.label.left) {
-            var leftLabel = svg.append('text')
-                .text(config.label.left)
-                .attr('x', -config.textSize / 2)
-                .attr('y', middlePositionText())
-                .attr('text-anchor', 'end')
-                .attr('fill', config.labelColor)
-                .attr('font-family', 'sans-serif')
-                .attr('font-size', config.textSize);
-        }
-
-        if (config.label.right) {
-            var rightLabel = svg.append('text')
-                .text(config.label.right)
-                .attr('x', config.width + config.strokeWidth + config.textSize / 2)
-                .attr('y', middlePositionText())
-                .attr('fill', config.labelColor)
-                .attr('font-family', 'sans-serif')
-                .attr('font-size', config.textSize);
-        }
-
-        for (marker of config.marker) {
-            drawMarker(marker);
+        textarea.value = JSON.stringify(config, null, '  ');
+        textarea.oninput = function() {
+            try {
+                editConfig = JSON.parse(textarea.value);
+                error.innerHTML = '';
+                drawGauge(editConfig)
+            } catch (e) {
+                console.log(e);
+                error.innerHTML = e;
+            }
         }
     </script>
 </body>
