Improve explanation for config change

--- a/gauge.html
+++ b/gauge.html
@@ -28,7 +28,7 @@
 
     <div id="gauge"></div>
 
-    <div>Please reload this page for a reset of all configurations.</div>
+    <div>Change the Gauge settings below and see the effect above <strong>on the fly</strong>. Please reload this page for a reset of all settings.</div>
     <div id="error"></div>
     <textarea id="config" spellcheck="false" autocorrect="off" autocapitalize="off" rows="75"></textarea>
 
