--- a/gauge.html
+++ b/gauge.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-
+    <h1>The Gauge Playground</h1>
     <div id="gauge"></div>
 
     <div>Change the Gauge settings below and see the effect above <strong>on the fly</strong>. Please reload this page for a reset of all settings.</div>
