Adding an abstract intro

--- a/gauge.html
+++ b/gauge.html
@@ -26,7 +26,9 @@
 
 <body>
     <h1>The Gauge Playground</h1>
-    <div id="gauge"></div>
+    <p>A d3.js progress bar with some options</p>
+    
+    <div id="gauge"></div>    
 
     <div>Change the Gauge settings below and see the effect above <strong>on the fly</strong>. Please reload this page for a reset of all settings.</div>
     <div id="error"></div>
