Rename html playground

--- a/horiz-gauge-playground.html
+++ b/horiz-gauge-playground.html
@@ -35,7 +35,7 @@
     <div id="error"></div>
     <textarea id="config" spellcheck="false" autocorrect="off" autocapitalize="off" rows="75"></textarea>
 
-    <script src="./bundle.js"></script>
+    <script src="./horiz-gauge-bundle.js"></script>
     <script>
         var horizGauge = require('horiz-gauge');
         var config = {
