Correct spelling of fontFamily setting

--- a/horiz-gauge-playground.html
+++ b/horiz-gauge-playground.html
@@ -61,7 +61,7 @@
             "progressHeight": 26,
             "borderColor": "lightgray",
             "borderWidth": 4,
-            "font-family": 'monospace',
+            "fontFamily": 'sans-serif',
             "fontSize": 16,
             "margin": {
                 "left": 100,
