--- a/horiz-gauge-playground.html
+++ b/horiz-gauge-playground.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>HorizGauge</title>
+    <title>horiz-gauge</title>
 
     <style type="text/css">
         body {
